<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_standard_margin">

        <!-- Label -->
        <TextView
            android:id="@+id/edit_title_label"
            style="@style/ViewsLabelStyle"
            android:layout_alignBaseline="@id/edit_book_name"
            android:text="Title" />

        <!-- Field -->
        <EditText
            android:id="@+id/edit_book_name"
            style="@style/EditorFieldStyle"
            android:layout_toEndOf="@id/edit_title_label"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords" />
    </RelativeLayout>

    <!-- Price -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_standard_margin">

        <!-- Label -->
        <TextView
            android:id="@+id/edit_price_label"
            style="@style/ViewsLabelStyle"
            android:layout_alignBaseline="@id/edit_book_price"
            android:text="Price" />

        <!-- EUR -->
        <TextView
            android:id="@+id/edit_price_label_euro"
            style="@style/EurStyle"
            android:layout_alignBaseline="@id/edit_book_price"
            android:layout_toEndOf="@id/edit_price_label"
            android:text="€" />


        <!-- Field -->
        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:layout_toEndOf="@id/edit_price_label_euro"
            android:hint="@string/hint_book_price"
            android:inputType="numberDecimal" />
    </RelativeLayout>

    <!-- Quantity -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_standard_margin">

        <!-- Label -->
        <TextView
            android:id="@+id/edit_quantity_label"
            style="@style/ViewsLabelStyle"
            android:layout_alignBaseline="@id/edit_book_quantity"
            android:text="Quantity" />

        <!-- Field -->
        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/EditorFieldStyle"
            android:layout_toEndOf="@id/edit_quantity_label"
            android:hint="@string/hint_book_quantity"
            android:inputType="number" />
    </RelativeLayout>


    <!-- Supplier -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_standard_margin">

        <!-- Label -->
        <TextView
            android:id="@+id/edit_supplier_label"
            style="@style/ViewsLabelStyle"
            android:layout_alignBaseline="@id/edit_book_supplier"
            android:text="Supplier" />

        <!-- Field -->
        <EditText
            android:id="@+id/edit_book_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_supplier"
            android:inputType="textCapWords"
            android:layout_toEndOf="@id/edit_supplier_label"/>
    </RelativeLayout>

    <!-- Suppliers phone -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_standard_margin">

        <!-- Label -->
        <TextView
            android:id="@+id/edit_phone_label"
            style="@style/ViewsLabelStyle"
            android:layout_alignBaseline="@id/edit_book_phone"
            android:text="Phone" />

        <!-- Field -->
        <EditText
            android:id="@+id/edit_book_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_phone"
            android:inputType="phone"
            android:layout_toEndOf="@id/edit_phone_label"/>
    </RelativeLayout>

    <TextView
        style="@style/MandatoryFieldStyle"
        android:text="Please fill in all fields!" />
</LinearLayout>
